<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">音频可视化</string>
    <string name="action_settings">设置</string>    <string name="settings_color_sub_title_1">频谱视窗颜色设置</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">连接中</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">扫描中</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="settings_color_title">颜色设置</string>
    <string name="settings_color_sub_title_1">频谱视窗颜色设置</string>
    <string name="settings_color_sub_summary_1">设置频谱视窗背景颜色</string>
    <string name="settings_color_sub_title_2">波形视窗颜色设置</string>
    <string name="settings_color_sub_summary_2">设置波形视窗背景颜色</string>
    
    <string name="settings_misc_title">杂项设置</string>
    <string name="settings_misc_sub_title_1">禁止锁屏</string>
    <string name="settings_misc_sub_summary_1">在软件运行时不会自动锁屏</string>
    
</resources>
