<!--
 Copyright (C) 2010 Daniel Nilsson

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:picker="http://schemas.android.com/apk/res/afzkl.development.colorpickerview.demo" >

    <PreferenceCategory android:title="@string/settings_color_title" >
        <afzkl.development.colorpickerview.preference.ColorPickerPreference
            android:defaultValue="0xFF000000"
            android:key="settings_val_color_specturm"
            android:summary="@string/settings_color_sub_summary_1"
            android:title="@string/settings_color_sub_title_1" />
        
        <afzkl.development.colorpickerview.preference.ColorPickerPreference
            android:defaultValue="0xFF000000"
            android:key="settings_val_color_wave"
            android:summary="@string/settings_color_sub_summary_2"
            android:title="@string/settings_color_sub_title_2" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_misc_title">
        <CheckBoxPreference android:key="settings_val_bool_iskeepon" android:title="@string/settings_misc_sub_title_1" android:summary="@string/settings_misc_sub_summary_1" android:disableDependentsState="false" android:defaultValue="false"/>
    </PreferenceCategory>


</PreferenceScreen>